--- a/index.html
+++ b/index.html
@@ -1,8 +1,17 @@
 <html>
 
 <head>
+  <title>Tic Tac Toe AI</title>
+
   <script src="https://cdn.jsdelivr.net/npm/p5@1.1.9/lib/p5.js"></script>
-  <script src="sketch.js"></script>
+
+  <script src="scripts/sketch.js"></script>
+  <script src="scripts/board.js"></script>
+  <script src="scripts/display_manager.js"></script>
+  <script src="scripts/game_manager.js"></script>
+  <script src="scripts/cell.js"></script>
+  <script src="scripts/winner.js"></script>
+  <script src="scripts/ai.js"></script>
 </head>
 
 <body bgcolor="292929">
